--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,7 +25,7 @@
 
 
     <link rel="stylesheet" href="/css/main.css">
-    {% include counter.html %}
+    {% include counters.html %}
 </head>
 
 <body>
